fix sidebar dark mode parent items

--- a/src/css/global-sidebar.css
+++ b/src/css/global-sidebar.css
@@ -15,7 +15,3 @@
 .menu__list-item-collapsible {
 	font-size: 1.125rem;
 }
-
-.menu__list-item-collapsible a {
-	color: black;
-}
